[gd_scene load_steps=2 format=3 uid="uid://c4p64n0d70yq1"]

[ext_resource type="Script" uid="uid://xuwpd2fd7xeo" path="res://Scenes/Bosses/tamandua-bandeira/tongue.gd" id="1_hngom"]

[node name="Tongue" type="Node2D"]
script = ExtResource("1_hngom")
speed = 40.0
retract_speed = 600.0
damage = 5.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 0, 0.5803922, 1)
antialiased = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
